--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
     Options -Multiviews
     RewriteEngine On 
-    RewriteBase /facetious-mvc/public
+    RewriteBase /facetious-shareposts/public
     # RewriteBase _YOUR_LOCATION_
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
